--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,9 @@ display: flex;
 .align-center{
     align-items: center;
 }
+.text-center{
+ text-align: center;
+}
 
 a{
  text-decoration: none;
@@ -62,18 +65,26 @@ p{
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
-    margin-bottom: 32px;
 }
+input{
+    width: 100%;
+    border: none;
+    outline: none;
+  }
 
 .section-title{
     font-size: 40px;
-    margin-bottom: 32px;
     color: rgb(14, 14, 14);
     font-size: 40px;
     font-weight: 700;
     line-height: 48px;
 }
-
+.mb-32{
+    margin-bottom: 32px;
+}
+.mb-24{
+    margin-bottom: 24px;
+}
 .mb-16{
     margin-bottom: 16px;
 }
@@ -86,6 +97,34 @@ section{
 .p-24{
  padding: 24px;
 }
+.px-88{
+ padding: 0 88px;
+}
+.px-40{
+ padding: 0 40px;
+}
+.py-18{
+ padding: 18px 0;
+}
+.py-20{
+  padding: 20px 0;
+}
+.py-13{
+    padding-top: 13px;
+    padding-bottom: 13px;
+ }
+ .py-17{
+   padding-top: 17px;
+   padding-bottom: 17px;
+ }
+ .px-34{
+  padding-left: 34px;
+  padding-right: 34px;
+ }
+ .px-26{
+     padding-left: 26px;
+     padding-right: 26px;
+ }
 
 
 /* utility  css end */
@@ -132,22 +171,7 @@ section{
     background-color: transparent;
     color: #006A50;
 }
-.py-13{
-   padding-top: 13px;
-   padding-bottom: 13px;
-}
-.py-17{
-  padding-top: 17px;
-  padding-bottom: 17px;
-}
-.px-34{
- padding-left: 34px;
- padding-right: 34px;
-}
-.px-26{
-    padding-left: 26px;
-    padding-right: 26px;
-}
+
 /* header css end */
 
 
@@ -411,4 +435,44 @@ section{
 }
 
 /* news section end */
+
+
+/* donate section start  */
+.donate-wrapper{
+  flex-wrap: wrap;
+  gap: 24px;
+}
+.donate-box{
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    border-radius: 16px; 
+    background: rgb(255, 255, 255);
+    padding: 40px;
+    cursor: pointer;
+}
+.donate-box:hover{
+   background-color: rgb(198, 228, 214);
+}
+.donate-box.active{
+    background-color: rgb(198, 228, 214);
+}
+.donate-box span{
+    color: rgba(14, 14, 14, 0.8);
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+}
+
+.input-box{
+    border-bottom: 1px solid rgba(14, 14, 14, 0.15);
+    background: rgb(255, 255, 255);
+}
+.input-box input{
+    color: rgba(14, 14, 14, 0.3);
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+
+}
+
+/* donate section end */
 
