--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,9 @@ display: flex;
 .row{
     flex-direction: row;
 }
+.justify-start{
+  justify-content: start;
+}
 .justify-between{
     justify-content: space-between;
 }
@@ -98,16 +101,20 @@ section{
  padding: 24px;
 }
 .px-88{
- padding: 0 88px;
+ padding-left:88px;
+ padding-right:88px;
 }
 .px-40{
- padding: 0 40px;
+ padding-left:40px;
+ padding-right:40px;
 }
 .py-18{
- padding: 18px 0;
+ padding-top: 18px;
+ padding-bottom: 18px;
 }
 .py-20{
-  padding: 20px 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 .py-13{
     padding-top: 13px;
@@ -125,8 +132,13 @@ section{
      padding-left: 26px;
      padding-right: 26px;
  }
-
-
+.px-16{
+  padding-left: 16px;
+  padding-right: 16px;
+}
+.pt-32{
+ padding-top: 32px;
+}
 /* utility  css end */
 
 
@@ -463,7 +475,7 @@ section{
 }
 
 .input-box{
-    border-bottom: 1px solid rgba(14, 14, 14, 0.15);
+   
     background: rgb(255, 255, 255);
 }
 .input-box input{
@@ -471,8 +483,86 @@ section{
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
-
+    border-bottom: 1px solid rgba(14, 14, 14, 0.15);
+}
+.input-box input:focus{
+  border-bottom-color: #006A50 ;
 }
 
 /* donate section end */
+
+
+/* newsletter section start  */
+.newsletter-wrap{
+ width: 100%;
+ padding: 80px 100px;
+ border-radius: 24px;
+ background: rgb(198, 228, 214);
+}
+.newsletter-content{
+ max-width: 750px;
+}
+.newsletter-input-wrap{
+ width: 100%;
+ margin-bottom: 25px;
+}
+
+.newsletter-input{
+ flex-grow: 1;
+}
+.newsletter-input input{
+    color: rgba(14, 14, 14, 0.3);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    border-radius: 8px 0px 0px 8px;
+    border: 1px solid #fff;
+}
+.newsletter-input input:focus{
+ border-color: rgb(0, 106, 80);;
+}
+.subscribe-btn{
+    border-radius: 0px 8px 8px 0px;
+    background: rgb(0, 106, 80);
+    flex-grow: 0;
+    padding: 17px 34px;
+    color:#fff;
+    cursor: pointer;
+    border:none;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 22px;
+}
+.subscribe-btn:hover{
+    background: rgb(1, 60, 57);
+}
+/* newsletter section end */
+
+/* footer start  */
+#footer{
+ background-color: #fff;
+ padding-top: 50px ;
+ padding-bottom: 50px ;
+}
+.footer-title{
+    color: rgb(14, 14, 14);
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 38px;
+}
+.footer-social{
+    border-top: 1px solid rgba(14, 14, 14, 0.1);
+}
+.footer-social img{
+   width:18px;
+   transition: filter 0.3s ease;
+}
+.footer-social img:hover{
+    filter: grayscale(100%);
+}
+.copy{
+ color:#006A50;
+ cursor: pointer;
+}
+/* footer end */
 
